# ipp-15-16

./: .gitignore  README.md  sensor_color_connections.txt
arduino/calibration/: calibration.ino
arduino_flexiforce/flexiforce_read/flexiforce_read/: flexiforce_read.ino
arduino_flexiforce/motor_code/: SensorControl.cpp  SensorControl.h  SensorObj.cpp  SensorObj.h  SerialComm.cpp  SerialComm.h  ServoControl.cpp  ServoControl.h  ServoObj.cpp  ServoObj.h  motor_code.ino
arduino_flexiforce/python_plot/: python_plot.py
arduino_flexiforce/results/: grip_coke_fail.txt  grip_empty_tea.txt  grip_eraser.txt  grip_thermos.txt  grip_water.txt
arduino_flexiforce/results/orig_low_battery/: grip_coke.txt  (+4 more)
arduino_reference/calibration/: read_write.rb
arduino_reference/read_write/: makefile  read_write  read_write.c  read_write.py  read_write.rb
arduino_reference/xbee/: xbee.ino
catkin_ws/devel/: setup.sh
catkin_ws/src/loadcell_calibration/: CMakeLists.txt  package.xml
catkin_ws/src/loadcell_calibration/scripts/: loadcell.py
deprecated/catkin_ws/src/loadcell_calibration/: CMakeLists.txt
deprecated/catkin_ws/src/loadcell_calibration/arduino/: CMakeLists.txt  chatter.cpp
deprecated/catkin_ws/src/loadcell_calibration/scripts/: calibration_server.py
deprecated/catkin_ws/src/loadcell_calibration/srv/: GetFactor.srv
deprecated/loadcell_arduino_to_ros_output/: loadcell_arduino_to_ros_output.ino
loadcell_arduino_to_ros_output/: loadcell_arduino_to_ros_output.ino
loadcell_calibration/: calibration.ino
loadcell_calibration/calibration/: calibration.ino
(+52 files in other folders)
